--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
-
+    jvmArgs '-ea'
+    
     testLogging {
         events "passed", "skipped", "failed"
 
